src/components/Sidebar/sidebar-option.css
.sidebar-option {
  padding: var(--sgds-padding-xs);
  cursor: pointer;
  border-radius: var(--sgds-border-radius-md);
  outline-offset: -1px;
}

.sidebar-option.active {
  background-color: var(--sgds-surface-raised);
  color: var(--sgds-primary-color-default);
}

.sidebar-option-label-wrapper {
  display: flex;
  font-size: var(--sgds-font-size-1);
  line-height: var(--sgds-line-height-20);
  gap: var(--sgds-gap-sm);
  align-items: center;
}

.sidebar-option--collapsed .sidebar-option-label,
.sidebar-option--collapsed .sidebar-option-trailing-icon {
  display: none;
}

.sidebar-option--collapsed .sidebar-option-label-wrapper {
  justify-content: center;
}

.sidebar-submenu {
  overflow: hidden;
}

.sidebar-submenu > div {
  padding: var(--sgds-padding-xs);
  pointer-events: none;
  margin-top: -100%;
  transition: all var(--sgds-motion-duration-standard) var(--sgds-motion-easing-standard);
}

.sidebar-submenu.show > div {
  pointer-events: auto;
  margin-top: 0;
}

